--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -44,5 +44,23 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>	
 	
+	<!-- 에러페이지 처리 --> 
+	<error-page>
+		<error-code>404</error-code>
+		<location>/errorPage/error404</location>
+	</error-page>
+	<error-page>
+		<error-code>405</error-code>
+		<location>/errorPage/error405</location>
+	</error-page>
+	<error-page>
+		<error-code>500</error-code>
+		<location>/errorPage/error500</location>
+	</error-page>
+	<error-page>
+		<exception-type>java.lang.NullPointerException</exception-type>
+		<location>/errorPage/errorNullPointer</location>
+	</error-page>
+	
 
 </web-app>
